--- a/AlarmToMailServer/AlarmToMailServer.csproj
+++ b/AlarmToMailServer/AlarmToMailServer.csproj
@@ -5,9 +5,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AlarmToMail" />
+    <None Remove="AlarmToMail.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="AlarmToMail">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="AlarmToMail.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.0" />
     <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
