--- a/AlarmToMailServer/appsettings.json
+++ b/AlarmToMailServer/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +6,22 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Connection": "",
+  "Connection": "Server=DESKTOP-CRG199T;Database=Monocrystal;User ID=sa;Password=123;Trusted_Connection=False;", //发送邮件服务的sqlserver地址
+  "DBCluster": {
+    "Connection1": "Server=DESKTOP-CRG199T;Database=Monocrystal;User ID=sa;Password=123;Trusted_Connection=False;",
+    "Connection2": "Server=192.168.150.129;Database=Monocrystal;User ID=sa;Password=123;Trusted_Connection=False;",
+    "Connection3": "Server=DESKTOP-CRG199T;Database=Monocrystal;User ID=sa;Password=123;Trusted_Connection=False;"
+  }, //sqlserver集群,可设置任意数量
+  "MailConfig": {
+    "receivers": "hc028@qq.com",
+    "mailProfile": "集中监控邮件推送",
+    "copy_receivers": "77943855@qq.com;964580795@qq.com", //抄送邮箱用;号分割
+    "subject": "" //邮件主题系统自带默认标题，此处填写会覆盖系统默认标题
+  },
+  "TaskTimeConfig": {
+    "Hour": 1, //24小时制
+    "Minute": 36, //0-59
+    "Second": 25 //0-59
+  },
   "AllowedHosts": "*"
 }
